--- a/ClaseDeRepaso.5.html
+++ b/ClaseDeRepaso.5.html
@@ -9,7 +9,7 @@
 <body>
     <p>TECNOLOGÍA</p>
     <div>
-        <img src="Imagenes_ClaseDeRepaso.5/imagen_2.jpg" />
+        <img src="imagen_2.jpg" img="mercado" />
     </div>
  <h1>Así fue como la tecnología mundial colapsó repentinamente</h1>
     <p id="autora">Historia de Valeria Ordóñez Ghio-2024</p>
@@ -25,7 +25,7 @@
     <p>Las actualizaciones de software tienen una función fundamental en la sociedad para mantener las computadoras protegidas de los hackers. Pero el proceso de actualización en sí es crucial para hacerlo bien y protegerlo contra manipulaciones. Una confianza inherente (y algunos dicen fuera de lugar) en ese proceso se vio mermada el viernes.</p>
     
     <div>
-        <img src="Imagenes_ClaseDeRepaso.5/imagen_3.jpg"/>
+        <img src="imagen_3.jpg" img="micro"/>
     </div>
 
     <ul class="subt">
@@ -37,4 +37,5 @@
     </ul>
     <p>Microsoft dijo que la “causa subyacente” de la interrupción “ha sido solucionada”, y agregó que el impacto residual aún afecta a algunos servicios. "Estamos llevando a cabo mitigaciones adicionales para brindar alivio", dijo la compañía de tecnología en una publicación en X. Algunos servicios se han restablecido, pero otros aún están lidiando con las interrupciones.</p>
 </body>
+
 </html>
